2003-10-15  Dan Jakubiec  <djakubiec@yahoo.com>
            Andrew Lunn   <andrew.lunn@ascom.ch>

	* src/sntp.c: Added DHCP support for SNTP unicast mode.
	* src/sntp.cdl: Added DHCP support for SNTP unicast mode.
	* src/sntp.h: Removed UDP port constant.
	* src/sntp1.c: Added test code for SNTP unicast mode.
	* src/sntp.sgml: Added documentation for SNTP unicast mode.

2003-09-29  Dan Jakubiec  <firstname.lastname@systech.com>

	* src/sntp.c: Added support for SNTP unicast mode.
	* src/sntp.h: Added support for SNTP unicast mode.
	* src/sntp.cdl: Added support for SNTP unicast mode.

2003-05-19  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/sntp.c: Added support for IPv6 multicast NTP packets.

2003-04-09  Michael Checky  <Michael_Checky@Thermoking.com>

	* src/sntp.c: In function sntp_fn() changed 'version' to
	'new_srv.version' in the CYG_TRACE1() call.

2003-02-25  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/sntp.h: Include <cyg/infra/cyg_type.h> for __externC.

2003-02-25  Gary Thomas  <gary@mlbassoc.com>

	* tests/sntp1.c (net_test): Strip the trailing "\n" making it more
	  readable.
	
2003-02-25  Andrew Lunn  <andrew.lunn@ascom.ch>

	* doc/sntp.sgml: Added license banner and added missing </para>
	* include/sntp.h (cyg_sntp_start): C++ safe
	* cdl/sntp.cdl: Stricture requirements and same description as in
  	  ecos.db.  Only build the test if CYGPKH_NET_BUILD_HW_TESTS
	* tests/sntp1.c (net_test): Check we have the required
	  packages. Require the time to be within 90 days of the build
	  date of the test
		
	
2003-02-16  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/sntp.c: First import of SNTP client code.
	* include/sntp.c: Ditto
	* test/sntp1.c: Ditto
	* cdl/sntp.cdl: Ditto
	* doc/sntp.sgml: Ditto

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.